[project]
name = "langgraph-codex"
version = "0.1.0"
description = "Deterministic LangGraph orchestration with optional Codex execution backends"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Michal Tyrolski" }]
keywords = [
    "codex",
    "langgraph",
    "workflow",
    "orchestration",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["langgraph_codex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP007"]

[tool.mypy]
python_version = "3.10"
packages = ["langgraph_codex"]
strict = true
warn_unused_configs = true
