[project]
name = "langgraph-codex"
version = "0.1.0"
description = "Deterministic LangGraph orchestration with optional Codex execution"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Michal Tyrolski" }]
keywords = [
    "codex",
    "langgraph",
    "workflow",
    "orchestration",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=0.2.0",
    "pyright>=1.1.410",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "mypy>=1.10.0",
    "pylint>=3.3.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "twine>=6.1.0",
]

[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["langgraph_codex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP007"]

[tool.mypy]
python_version = "3.10"
packages = ["langgraph_codex"]
strict = true
warn_unused_configs = true

[tool.pylint.main]
jobs = 0
py-version = "3.10"
recursive = true

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([0-9]{2}_[a-z0-9_]+))$"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "consider-using-from-import",
    "duplicate-code",
    "fixme",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-instance-attributes",
    "too-few-public-methods",
]
